# stdmMf_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake-modules/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
scripts/: analyzeAdaptTestData.py  check_sims.R  explore.R  plotNetworks.py  plot_ebola_obs.R  plot_ebola_sims.R  plot_toy_sims.R  tuples_to_tfrecords.py  visualize_ebola.R
src/: CMakeLists.txt  agent.cpp  agent.hpp  agent.proto  brMinExperiment.cpp  brMinSimPerturbAgent.cpp  brMinSimPerturbAgent.hpp  epsAgent.cpp  epsAgent.hpp  experiment.cpp  experiment.hpp  features.hpp  features.proto  git_description.cpp.in  git_description.hpp  minVfnAgent.cpp  minVfnAgent.hpp  model.cpp  model.hpp  myopicAgent.cpp  myopicAgent.hpp  network.cpp  network.hpp  network.proto  networkRunFeatures.cpp  networkRunFeatures.hpp  networkRunSymFeatures.cpp  networkRunSymFeatures.hpp  noCovEdgeMaxSoModel.cpp  noCovEdgeMaxSoModel.hpp  noCovEdgeModel.cpp  noCovEdgeModel.hpp  noCovEdgeModelMaxSo.cpp  noCovEdgeModelMaxSo.hpp  noCovEdgeOrSoModel.cpp  noCovEdgeOrSoModel.hpp  noCovEdgeSepSoModel.cpp  noCovEdgeSepSoModel.hpp  objFns.cpp  objFns.hpp  (+36 more)
src/data/: ebola_country.txt  ebola_county.txt  ebola_edges.txt  ebola_loc.txt  ebola_outbreaks.txt  ebola_population.txt  ebola_region.txt  ebola_x.txt  ebola_y.txt  extract.R
src/main/: CMakeLists.txt  adaptTestData.proto  agent.cpp  agent.hpp  allTrtAgent.cpp  allTrtAgent.hpp  brMinIterSimPerturbAgent.cpp  brMinIterSimPerturbAgent.hpp  brMinSimPerturbAgent.cpp  brMinSimPerturbAgent.hpp  brMinStartsSimPerturbAgent.cpp  brMinStartsSimPerturbAgent.hpp  brMinWtdSimPerturbAgent.cpp  brMinWtdSimPerturbAgent.hpp  brModSuppSimPerturbAgent.cpp  brModSuppSimPerturbAgent.hpp  ebolaBinnedFeatures.cpp  ebolaBinnedFeatures.hpp  ebolaData.cpp  ebolaData.hpp  ebolaFeatures.cpp  ebolaFeatures.hpp  ebolaModelFeatures.cpp  ebolaModelFeatures.hpp  ebolaStateGravityModel.cpp  ebolaStateGravityModel.hpp  ebolaStateModel.cpp  ebolaStateModel.hpp  ebolaTransProbFeatures.cpp  ebolaTransProbFeatures.hpp  epsAgent.cpp  epsAgent.hpp  features.cpp  features.hpp  finiteQfnFeatures.cpp  finiteQfnFeatures.hpp  finiteQfnNnFeatures.cpp  finiteQfnNnFeatures.hpp  git_description.cpp.in  infShieldStateModel.cpp  (+85 more)
src/prototxt/: neural_network_model.prototxt  neural_network_solver.prototxt
test/: CMakeLists.txt  test_ebolaBinnedFeatures.cpp  test_ebolaFeatures.cpp  test_ebolaModelFeatures.cpp  test_ebolaStateGravityModel.cpp  test_ebolaTransProbFeatures.cpp  test_experiment.cpp  test_infShieldStateNoImNoSoModel.cpp  test_infShieldStatePosImNoSoModel.cpp  test_infStateNoSoModel.cpp  test_infStateOrSoModel.cpp  test_infStateSepSoModel.cpp  test_infStateXorSoModel.cpp  test_network.cpp  test_networkFunFeatures.cpp  test_networkRunFeatures.cpp  test_networkRunSymFeatures.cpp  test_networkRunSymFeatures_infShieldState.cpp  test_networkRunSymFeatures_infState.cpp  test_noCovEdgeMaxSoModel.cpp  test_noCovEdgeModel.cpp  test_noCovEdgeModelMaxSo.cpp  test_noCovEdgeOrSoModel.cpp  test_noCovEdgeSepSoModel.cpp  test_noCovEdgeXorSoModel.cpp  test_polValIteration.cpp  test_progress.cpp  test_simPerturb.cpp  test_sweepAgent.cpp  test_trapperKeeper.cpp  test_utilities.cpp
